--- a/personal_website/styles/style.css
+++ b/personal_website/styles/style.css
@@ -40,21 +40,23 @@ body {
 
 }
 
+h2 {
+    font-family: var(--heading-font);
+}
+
 img {
     max-width: 100%;
 }
 
-
-#banner-box {
-    grid-column: 2;
-    grid-row: 1;
-    max-width: 100%;
-    height: auto;
+#banner {
+    grid-template-columns: 1fr 3fr 1fr;
 }
 
-.responsive {
-    max-width: 100%;
-    height: 100%;
+#banner-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -65,9 +67,9 @@ img {
 
 header {
     display: grid;
-    grid-template-columns: repeat(3 1fr);
     grid-template-rows: 100px 100px;
     align-items: center;
+    font-family: var(--heading-font);
 }
 
 .leftnav {
@@ -134,7 +136,7 @@ nav a:hover {
 
 .main-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     margin: 0 auto;
     padding: 0 1em;
     max-width: 100%;
@@ -146,8 +148,10 @@ nav a:hover {
     height: 100%;
     width: 100%;
     text-align: justify;
-    padding: 0 1em;
+    /* padding: 0 1em; */
+    margin-top: 50px;
 }
+
 .slides {
     grid-column: 2;
     grid-row: 1;
@@ -155,9 +159,7 @@ nav a:hover {
     width: 100%;
     display: block;
     padding: 50px;
-    margin: 50px;
 }
-
 
 
 /*-----------------------------------------*/
@@ -167,6 +169,7 @@ nav a:hover {
 .carousel {
     margin-left: 15%;
     margin-right: 15%;
+    margin-top: 70px;
 }
 
 ul.slides {
@@ -189,12 +192,12 @@ ul.slides {
 }
 
 ul.slides input {
-    display: none; 
+    display: none;
 }
 
 
-.slide-container { 
-    display: block; 
+.slide-container {
+    display: block;
 }
 
 .slide-image {
@@ -205,7 +208,7 @@ ul.slides input {
     top: 0;
     opacity: 0;
     transition: all .7s ease-in-out;
-}   
+}
 
 .slide-image img {
     width: auto;
@@ -233,7 +236,7 @@ ul.slides input {
     cursor: pointer;
 }
 
-.slide-image:hover + .carousel-controls label{
+.slide-image:hover+.carousel-controls label {
     opacity: 0.5;
 }
 
@@ -272,34 +275,35 @@ ul.slides input {
     margin: 10px;
 }
 
-input:checked + .slide-container .slide-image {
+input:checked+.slide-container .slide-image {
     opacity: 1;
     transform: scale(1);
     transition: opacity 1s ease-in-out;
 }
 
-input:checked + .slide-container .carousel-controls label {
-     display: block; 
+input:checked+.slide-container .carousel-controls label {
+    display: block;
 }
 
-input#img-1:checked ~ .carousel-dots label#img-dot-1,
-input#img-2:checked ~ .carousel-dots label#img-dot-2,
-input#img-3:checked ~ .carousel-dots label#img-dot-3,
-input#img-4:checked ~ .carousel-dots label#img-dot-4,
-input#img-5:checked ~ .carousel-dots label#img-dot-5,
-input#img-6:checked ~ .carousel-dots label#img-dot-6 {
-	opacity: 1;
+input#img-1:checked~.carousel-dots label#img-dot-1,
+input#img-2:checked~.carousel-dots label#img-dot-2,
+input#img-3:checked~.carousel-dots label#img-dot-3,
+input#img-4:checked~.carousel-dots label#img-dot-4,
+input#img-5:checked~.carousel-dots label#img-dot-5,
+input#img-6:checked~.carousel-dots label#img-dot-6 {
+    opacity: 1;
 }
 
 
-input:checked + .slide-container .nav label { display: block; }
+input:checked+.slide-container .nav label {
+    display: block;
+}
 
 /*-----------------------------------------*/
 /*             footer                      */
 /*-----------------------------------------*/
 
 footer {
-    color: var(--color-white);
     background-color: #105F9E;
     padding: 25px 50px;
     margin: 200px 0 0 0;
@@ -314,19 +318,22 @@ footer {
 .social-media {
     width: 50px;
     height: 50px;
-    text-decoration: none;
 }
 
 .social {
     background-color: #fff;
     padding: 10px;
-    text-decoration: none;
 }
 
 footer a {
     text-decoration: none;
-    text-decoration-color: none;
     color: #fff;
+}
+
+.site_plan:hover {
+    text-decoration-line: underline;
+    text-decoration-color: white;
+    text-underline-offset: 1rem;
 }
 
 
@@ -336,9 +343,16 @@ footer a {
         display: block;
     }
 
-    header, nav {
+    header,
+    nav {
         display: block;
-        
+
+    }
+
+    .carousel {
+        margin-left: 0%;
+        margin-right: 0%;
+        margin-top: 0px;
     }
 
     .banner .home-grid {
@@ -346,18 +360,22 @@ footer a {
         height: auto;
     }
 
-    nav, footer {
+    nav,
+    footer {
         flex-direction: column;
     }
+
     nav a {
-        display:flex;
+        display: flex;
         padding: 15px;
     }
+
     .message {
         width: 100%;
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
