--- a/personal_website/styles/style.css
+++ b/personal_website/styles/style.css
@@ -59,6 +59,11 @@ img {
     justify-content: center;
 }
 
+#content {
+    max-width: 1600px;
+    margin: auto;
+    background-color: var(--color-white);
+}
 
 
 /*-----------------------------------------*/
@@ -141,6 +146,7 @@ nav a:hover {
     padding: 0 1em;
     max-width: 100%;
 }
+
 h2 {
     background-color: #A8DADC;
     padding: 20px;
@@ -346,11 +352,6 @@ footer a {
 /*-----------------------------------------*/
 /*            How works?                   */
 /*-----------------------------------------*/
-#content {
-    max-width: 1600px;
-    margin: auto;
-    background-color: var(--color-white);
-}
 
 #h1_title {
     display: grid;
@@ -362,7 +363,7 @@ footer a {
 .grid_title_h1 {
     grid-area: auto /2/ auto/3;
     padding: 35px;
-    background-color:var(--accent1-color);
+    background-color: var(--accent1-color);
     color: black;
 }
 
@@ -430,8 +431,107 @@ footer a {
     grid-row: 3/4;
     grid-column: 2/3;
     padding: 25px;
-    text-align: justify;  
+    text-align: justify;
 }
+
+
+/*-----------------------------------------*/
+/*                   FAQ                   */
+/*-----------------------------------------*/
+
+.story {
+    grid-column: 2/-2;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    background-color: black;
+    color: #fff;
+    margin: .5em;
+    margin-bottom: 2em;
+}
+
+summary {
+    color: var(--color-white);
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+    background: var(--secondary-color);
+    font-weight: bold;
+    cursor: pointer;
+}
+
+summary:hover {
+    background: var(--primary-color);
+}
+
+details summary::after {
+    content: "\276F";
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    transition: all 0.35s;
+}
+
+details[open] summary::after {
+    content: "\276F";
+    transform: rotate(90deg);
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    transition: all 0.35s;
+
+}
+
+.story p {
+    grid-column: 1/5;
+    padding: .5em 2em;
+    border: 5px solid var(--primary-color);
+    text-align: justify;
+
+}
+
+.content-faq {
+    padding-top: 2em;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+#banner-box-faq {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+
+.home-title {
+    color: white;
+    font-family: var(--heading-font);
+    font-size: 2em;
+    top: 150px;
+    font-size: 70px;
+    padding: 20px;
+    justify-content: center;
+    position: absolute;
+    background-color: var(--primary-color);
+}
+
+.image_faq {
+    border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -459,6 +559,19 @@ footer a {
         height: auto;
     }
 
+    .home-title {
+        display: block;
+        font-size: 20px;
+        top: 40px;
+        width: 180px;
+    }
+
+    .image_faq {
+        border: none;
+        width: 400px;
+        height: 250px;
+    }
+
     nav,
     footer {
         flex-direction: column;
@@ -478,6 +591,7 @@ footer a {
     footer {
         margin-top: 25px;
     }
+
     /*------------------- main how works----------------------*/
     #grid-works {
         display: block;
