--- a/youtube_channel/styles/style.css
+++ b/youtube_channel/styles/style.css
@@ -138,177 +138,71 @@ nav a:hover {
 /*-----------------------------------------*/
 /*                MAIN                     */
 /*-----------------------------------------*/
-
-.main-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 0 auto;
-    padding: 0 1em;
-    max-width: 100%;
+.minute_background {
+    background-color: #E63946;
 }
 
 h2 {
-    background-color: #A8DADC;
+    background-color: #E63946;
     padding: 20px;
-    color: black;
+    color: white;
+    text-align: center;
 }
 
-.message {
+.main-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 auto;
+    padding: 0 4em;
+    max-width: 100%;
+    gap: 0 4em;
+}
+
+.message_one {
     grid-column: 1;
     grid-row: 1;
     height: 100%;
     width: 100%;
     text-align: justify;
-    /* padding: 0 1em; */
     margin-top: 50px;
+
+}
+.slide_image_one {
+    margin-top: 0;
+    grid-column: 1;
+    grid-row: 2;
+    
 }
 
-.slides {
+.message_two {
     grid-column: 2;
     grid-row: 1;
     height: 100%;
     width: 100%;
-    display: block;
-    padding: 50px;
+    text-align: justify;
+    margin-top: 50px;
+
+}
+.slide_image_two {
+    grid-column: 2;
+    grid-row: 2;
+    
 }
 
-
-/*-----------------------------------------*/
-/*             slider images               */
-/*-----------------------------------------*/
-
-.carousel {
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 70px;
-}
-
-.slides {
-    display: block;
-    position: relative;
-    height: 600px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    list-style: none;
-}
-
-.slides * {
-    user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
-}
-
-.slides input {
-    display: none;
-}
-
-
-.slide-container {
-    display: block;
-}
-
-.slide-image {
-    display: block;
-    position: absolute;
+.message_three {
+    grid-column: 3;
+    grid-row: 1;
+    height: 100%;
     width: 100%;
-    height: 100%;
-    top: 0;
-    opacity: 0;
-    transition: all .7s ease-in-out;
+    text-align: justify;
+    margin-top: 50px;
+}
+.slide_image_three {
+    grid-column: 3;
+    grid-row: 2;
+  
 }
 
-.slide-image img {
-    width: auto;
-    min-width: 100%;
-    height: 100%;
-}
-
-.carousel-controls {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    font-size: 100px;
-    line-height: 600px;
-    color: #fff;
-}
-
-.carousel-controls label {
-    display: none;
-    position: absolute;
-    padding: 0 20px;
-    opacity: 0;
-    transition: opacity .2s;
-    cursor: pointer;
-}
-
-.slide-image:hover+.carousel-controls label {
-    opacity: 0.5;
-}
-
-.carousel-controls label:hover {
-    opacity: 1;
-}
-
-.carousel-controls .prev-slide {
-    width: 49%;
-    text-align: left;
-    left: 0;
-}
-
-.carousel-controls .next-slide {
-    width: 49%;
-    text-align: right;
-    right: 0;
-}
-
-.carousel-dots {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    z-index: 999;
-    text-align: center;
-}
-
-.carousel-dots .carousel-dot {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #fff;
-    opacity: 0.5;
-    margin: 10px;
-}
-
-input:checked+.slide-container .slide-image {
-    opacity: 1;
-    transform: scale(1);
-    transition: opacity 1s ease-in-out;
-}
-
-input:checked+.slide-container .carousel-controls label {
-    display: block;
-}
-
-input#img-1:checked~.carousel-dots label#img-dot-1,
-input#img-2:checked~.carousel-dots label#img-dot-2,
-input#img-3:checked~.carousel-dots label#img-dot-3,
-input#img-4:checked~.carousel-dots label#img-dot-4,
-input#img-5:checked~.carousel-dots label#img-dot-5,
-input#img-6:checked~.carousel-dots label#img-dot-6 {
-    opacity: 1;
-}
-
-
-input:checked+.slide-container .nav label {
-    display: block;
-}
 
 /*-----------------------------------------*/
 /*             footer                      */
@@ -523,23 +417,12 @@ details[open] summary::after {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media (max-width: 40em) {
 
     .main-grid {
         display: block;
+        gap:0 ;
+        padding: 0 1em;
     }
 
     header,
@@ -592,7 +475,7 @@ details[open] summary::after {
         margin-top: 25px;
     }
     .slides {
-        height: 500px;
+        height: 300px;
     }
 
     /*------------------- main how works----------------------*/
