--- a/youtube_channel/styles/style.css
+++ b/youtube_channel/styles/style.css
@@ -330,7 +330,7 @@ footer a {
     display: grid;
     grid-column: 2;
     grid-row: 1;
-    padding: 25px;
+    padding: 20px;
     text-align: justify;
 }
 
@@ -422,6 +422,97 @@ details[open] summary::after {
     border: none;
 }
 
+/*-----------------------------------------*/
+/*            SUSCRIPTORES                 */
+/*-----------------------------------------*/
+
+.grid_suscriptores {
+    display: grid;
+    text-align: center;
+    font-family: var(--heading-font);
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.suscriptores_title {
+    grid-column: 2;
+    grid-row: 1;
+    padding: 10px;
+    color: white;
+    text-align: left;
+}
+
+.suscriptores_comments {
+    grid-area: auto /2/ auto/3;
+    padding: 0;
+    color: white;
+    text-align: left;
+}
+
+.the_table {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #fff;
+    color: black;
+    background-color: white;
+}
+
+table.scrolldown {
+    width: 300px;
+      
+    /* border-collapse: collapse; */
+    border-spacing: 0;
+    border: 2px solid black;
+}
+
+table.scrolldown tbody, table.scrolldown thead {
+    display: block;
+}
+
+
+thead tr th {
+    height: 40px; 
+    line-height: 40px;
+}
+
+table.scrolldown tbody {
+              
+    /* Set the height of table body */
+    height: 200px;
+      
+    /* Set vertical scroll */
+    overflow-y: auto;
+      
+    /* Hide the horizontal scroll */
+    overflow-x: hidden; 
+}
+
+tbody { 
+    border-top: 2px solid black;
+}
+
+td {
+    text-align: left;
+    padding: 8px 20px;
+}
+
+th {
+    padding: 8px 50px;
+}
+
+
+.suscriptores_image {
+    height: 36;
+    width: 36;
+    border-radius: 25px;
+}
 
 
 @media (max-width: 40em) {
@@ -503,6 +594,11 @@ details[open] summary::after {
     .image_section {
         height: 75%;
         width: 75%;
+    }
+
+    .grid_suscriptores {
+        padding: 0 10px;
+        display: block;
     }
 
 }
